--- a/E-commerce.Web/Views/Coupon/CouponIndex.cshtml
+++ b/E-commerce.Web/Views/Coupon/CouponIndex.cshtml
@@ -2,6 +2,8 @@
 
 @* This model at the top will be lowercase, anywhere else Model will be uppercase. *@
 
+@* Add a for each loop and iterate through the model to display the data in the view. *@
+
 <div class="card shadow border-0 mt-4">
 	<div class="card-header bg-secondary bg-gradient ml-0 py-3">
 		<div class="row">
@@ -15,7 +17,7 @@
 			<div class="col-6">
 			</div>
 			<div class="col-6 text-end">
-				<a class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Create New Coupon</a>
+				<a asp-action="CreateCoupon" class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Create New Coupon</a>
 
 			</div>
 		</div>
