--- a/E-commerce.Web/Views/Shared/_Layout.cshtml
+++ b/E-commerce.Web/Views/Shared/_Layout.cshtml
@@ -36,8 +36,23 @@
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
+                            </ul>                            
                         </li>
+                        <ul class="navbar-nav ms-auto">
+                            @if (!User.Identity.IsAuthenticated) // Razor
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Auth" asp-action="Login">Login</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Auth" asp-action="Register">Register</a>
+                                </li>
+                            }
+                            else
+                            {
+                                <a class="nav-link text-dark" asp-controller="Auth" asp-action="Logout">Logout</a>
+                            }
+                        </ul>
                     </ul>
                 </div>
             </div>
