--- a/E-commerce.Web/Views/Auth/Login.cshtml
+++ b/E-commerce.Web/Views/Auth/Login.cshtml
@@ -10,10 +10,10 @@
 		</div>
 		<div class="row">
 			<div class="col-12 col-md-6 offset-md-3 pb-2">
-				<input asp-for="UserName" class="form-control" placeholder="Username..." />
+				<input asp-for="UserName" class="form-control" placeholder="Email" />
 			</div>
 			<div class="col-12 col-md-6 offset-md-3 pb-2">
-				<input asp-for="Password" class="form-control" placeholder="Password..." />
+				<input asp-for="Password" class="form-control" placeholder="Password" />
 			</div>
 			<div class="col-12 col-md-6 offset-md-3 pb-2">
 				<button type="submit" class="form-control btn btn-success" value="Submit">Login</button>
