--- a/E-commerce.Web/Views/Auth/Register.cshtml
+++ b/E-commerce.Web/Views/Auth/Register.cshtml
@@ -7,24 +7,29 @@
 		</div>
 		<div class="row">
 			<div class="col-12 col-md-6 offset-md-3 pb-2">
-				<input asp-for="Email" class="form-control" placeholder="Email..." />
+				<input asp-for="Email" class="form-control" placeholder="Email" />
 				<span asp-validation-for="Email" class="text-danger" />
 			</div>
 			<div class="col-12 col-md-6 offset-md-3 pb-2">
-				<input asp-for="FirstName" class="form-control" placeholder="First Name..." />
+				<input asp-for="FirstName" class="form-control" placeholder="First Name" />
 				<span asp-validation-for="FirstName" class="text-danger" />
 			</div>
 			<div class="col-12 col-md-6 offset-md-3 pb-2">
-				<input asp-for="LastName" class="form-control" placeholder="Last Name..." />
+				<input asp-for="LastName" class="form-control" placeholder="Last Name" />
 				<span asp-validation-for="LastName" class="text-danger" />
 			</div>
 			<div class="col-12 col-md-6 offset-md-3 pb-2">
-				<input asp-for="PhoneNumber" class="form-control" placeholder="Phone Number..." />
+				<input asp-for="PhoneNumber" class="form-control" placeholder="Phone Number" />
 				<span asp-validation-for="PhoneNumber" class="text-danger" />
 			</div>
 			<div class="col-12 col-md-6 offset-md-3 pb-2">
-				<input asp-for="Password" class="form-control" placeholder="Password..." />
+				<input asp-for="Password" class="form-control" placeholder="Password" />
 				<span asp-validation-for="Password" class="text-danger" />
+			</div>
+			<div class="col-12 col-md-6 offset-md-3 pb-2">
+				<select asp-for="Role" class="form-select" asp-items="@ViewBag.RoleList">
+					<option disabled selected>--Select Role--</option>
+				</select>
 			</div>
 			<div class="col-12 col-md-6 offset-md-3 pb-2">
 				<button type="submit" class="form-control btn btn-success" value="Submit">Register</button>
