--- a/E-commerce.Web/Views/Shared/_Layout.cshtml
+++ b/E-commerce.Web/Views/Shared/_Layout.cshtml
@@ -50,7 +50,13 @@
                             }
                             else
                             {
-                                <a class="nav-link text-dark" asp-controller="Auth" asp-action="Logout">Logout</a>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" href="#">Hello, @User.Identity.Name</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Auth" asp-action="Logout">Logout</a>
+                                </li>
+                                
                             }
                         </ul>
                     </ul>
