--- a/E-commerce.Web/Views/Product/ProductIndex.cshtml
+++ b/E-commerce.Web/Views/Product/ProductIndex.cshtml
@@ -1,9 +1,10 @@
-﻿@model IEnumerable<ProductDto>
+﻿@using E_commerce.Web.Utility
+@model IEnumerable<ProductDto>
 <div class="card shadow border-0 mt-4">
 	<div class="card-header bg-secondary bg-gradient ml-0 py-3">
 		<div class="row">
 			<div class="col-12 text-center">
-				<h1 class="text-white">Products List</h1>
+				<h1 class="text-white">Products</h1>
 			</div>
 		</div>
 	</div>
@@ -12,8 +13,10 @@
 			<div class="col-6">
 			</div>
 			<div class="col-6 text-end">
-				<a asp-action="CreateProduct" class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Create New Product</a>
-
+				@if (User.IsInRole(StaticDetails.RoleAdmin))
+				{
+					<a asp-action="CreateProduct" class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Create New Product</a>
+				}
 			</div>
 		</div>
 		<table class="table">
@@ -45,12 +48,16 @@
 							@((item.Price).ToString("c"))
 						</td>
 						<td>
-							<a class="btn btn-success" asp-action="UpdateProduct" asp-route-productId="@item.ProductId">
-								<i class="bi bi-pencil-square"></i>
-							</a>
-							<a class="btn btn-danger" asp-action="DeleteProduct" asp-route-productId="@item.ProductId">
-								<i class="bi bi-trash"></i>
-							</a>
+							@if (User.IsInRole(StaticDetails.RoleAdmin))
+							{
+								<a class="btn btn-success" asp-action="UpdateProduct" asp-route-productId="@item.ProductId">
+									<i class="bi bi-pencil-square"></i>
+								</a>
+								<a class="btn btn-danger" asp-action="DeleteProduct" asp-route-productId="@item.ProductId">
+									<i class="bi bi-trash"></i>
+								</a>
+							}
+							
 						</td>
 					</tr>
 				}
