--- a/E-commerce.Web/Views/Product/UpdateProduct.cshtml
+++ b/E-commerce.Web/Views/Product/UpdateProduct.cshtml
@@ -43,11 +43,10 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="col-5 offset-2">
-
                 <a asp-action="ProductIndex" class="btn-primary btn form-control ">Back to List</a>
             </div>
             <div class="col-5">
-                <input type="submit" value="Create" class="btn btn-success form-control" />
+                <input type="submit" value="Update" class="btn btn-success form-control" />
             </div>
         </div>
     </div>
