--- a/E-commerce.Web/Views/Home/ProductDetails.cshtml
+++ b/E-commerce.Web/Views/Home/ProductDetails.cshtml
@@ -26,7 +26,8 @@
                                 </div>
                             </div>
                             <div class="row mx-0">
-                                <input class="form-control" />
+                                <input asp-for="Count" class="form-control" />
+                                <span asp-validation-for="Count" class="text-danger"></span>
                             </div>
                         </div>
                     </div>
@@ -44,3 +45,6 @@
     </div>
 </form>
 
+@section Scripts{
+    <partial name="_ValidationScriptsPartial" />
+}
