--- a/E-commerce.Web/Views/Shared/_Layout.cshtml
+++ b/E-commerce.Web/Views/Shared/_Layout.cshtml
@@ -44,6 +44,11 @@
                             }
                                                       
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="CartIndex">
+                                &nbsp; <i class="bi bi-cart"></i>&nbsp;
+                            </a>
+                        </li>
                         <ul class="navbar-nav ms-auto">
                             @if (!User.Identity.IsAuthenticated) // Razor
                             {
