--- a/E-commerce.Web/Views/Cart/CartIndex.cshtml
+++ b/E-commerce.Web/Views/Cart/CartIndex.cshtml
@@ -1,6 +1,8 @@
 ﻿@model CartDto
 <form method="post">
     <br />
+    <input asp-for="CartHeader.UserId" hidden />
+    <input asp-for="CartHeader.CartHeaderId" hidden />
     <div class="">
         <div class="card border mt-4 container">
             <div class="card-header bg-dark text-light ml-0 row ">
@@ -30,7 +32,6 @@
                     </div>
                 </div>
                 <hr />
-
                 @foreach (var cartObj in Model.CartDetails)
                 {
                     <div class="row h-100">
@@ -42,7 +43,7 @@
                             <div style="font-size:11px;">@Html.Raw(cartObj.Product.Description)</div>
                         </div>
                         <div class="col-3 col-md-2 pt-md-4" style="font-size:11px;">
-                            <span style="font-size:17px;">@string.Format("{0:c}",cartObj.Product.Price)</span>
+                            <span style="font-size:17px;">@string.Format("{0:c}", cartObj.Product.Price)</span>
                         </div>
                         <div class="col-3 col-md-2 pt-md-4" style="font-size:11px;">
                             <span style="font-size:17px;">@cartObj.Count</span>
@@ -57,24 +58,38 @@
                 <hr />
                 <div class="row">
                     <div class="col-6">
-                        <span>Coupon:</span>
-                        <input />
-                        <button type="submit" class="btn btn-sm btn-success"> Apply </button>
+                        @if (string.IsNullOrEmpty(Model.CartHeader.CouponCode))
+                        {
+                            <span>Coupon:</span>
+                            <input asp-for="CartHeader.CouponCode" />
+                            <button type="submit" asp-action="ApplyCoupon" class="btn btn-sm btn-success"> Apply </button>
+                        }
+                        else
+                        {
+                            <span>Coupon:</span>
+                            <input asp-for="CartHeader.CouponCode" disabled />
+                            <button type="submit" asp-action="RemoveCoupon" class="btn btn-sm btn-success"> Remove </button>
+                        }
                     </div>
                     <div class="col-6 text-end">
-                        <span class="text-danger" style="font-size:21px;">  Order Total : $$ <br /></span>
-                        <span class="text-success"> Order Discount :  $$</span>
+                        <span class="text-danger" style="font-size:21px;">  Order Total :  @string.Format("{0:c}", Model.CartHeader.CartTotal)  <br /></span>
+                        @if (Model.CartHeader.Discount > 0)
+                        {
+                            <span class="text-success"> Order Discount :   @string.Format("{0:c}", Model.CartHeader.Discount) </span>
+                        }
                     </div>
                 </div>
             </div>
+            
             <div class="card-footer row">
                 <div class="col-6 col-md-3 ">
                     <button type="submit" class="btn btn-outline-danger form-control">Email Cart</button>
                 </div>
                 <div class="col-6 col-md-3 offset-md-6">
-                    <button disabled class="btn btn-success form-control " value="Checkout (Comming Soon!)" />
+                    <button disabled class="btn btn-success form-control">Checkout (Comming Soon!)</button>
                 </div>
             </div>
+            
         </div>
     </div>
 </form>
