--- a/E-commerce.Web/Views/Home/Index.cshtml
+++ b/E-commerce.Web/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
                         <img src="@product.ImageUrl" class="card-img-top">
                         <div class="card-body">
                             <div class="d-flex justify-content-between py-2">
-                                <span class="text-success" style="font-size:20px;">@string.Format("{0:c}", @product.Price)</span>
+                                <span class="text-success" style="font-size:20px;">@($"{product.Price:$#,##0.00}")</span>
                                 <span class="badge bg-warning text-white p-2">@product.CategoryName</span>
                             </div>
                             <p class="card-text">@Html.Raw(product.Description)</p>
